<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="duty_rate">duty rate(%)</string>
    <string name="adc_dep">adc_dep</string>
    <string name="motor_dep">motor_dep</string>
    <string name="init">초기화</string>
    <string name="baudrate_summary">주파수를 설정하세요.</string>
    <string name="database_setting">데이터베이스</string>
    <string name="data_setting">저장된 데이터 불러오기</string>
    <string name="adc_chart_setting">ADC 차트 설정</string>
    <string name="motor_chart_setting">Motor 차트 설정</string>
    <string name="pwm_pulse_setting">PWM 차트 설정</string>
    <string name="i2c_pulse_setting">I2C 차트 설정</string>
    <string name="baudrate">주파수</string>
    <string name="Equal">Equal</string>
    <string name="Subject">Subject</string>
    <string name="Number">Number</string>
    <string name="Address">Address</string>
    <string name="Slave_Address">Slave Address</string>
    <string name="Register_Address">Register Address</string>
    <string name="objective_RPM_">Objective RPM</string>
    <string name="Write_Data">Write Data</string>
    <string name="Number_Read">Number of Read</string>
    <string name="Hz">Hz</string>
    <string name="pin_number">핀번호</string>
    <string name="unit">단위</string>
    <string name="Bps">Bps</string>
    <string name="configure">설정</string>
    <string name="confirm">확인</string>
    <string name="confirm2">적용</string>
    <string name="send">Send</string>
    <string name="blank">0</string>
    <string name="Master">Master</string>
    <string name="Slave">Slave</string>
    <string name="receive">Receive</string>
    <string name="receive_Setting">Receive_Setting</string>
    <string name="High">High</string>
    <string name="Low">Low</string>
    <string name="Modify">Modify</string>
    <string name="DATA">DATA</string>
    <string name="Send">Send</string>
    <string name="Send_Setting">Send_Setting</string>
    <string name="app_name">Testing Boad</string>
    <string name="hello_world">Test</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Testing Master</string>
    <string name="adc_test">ADC Test</string>
    <string name="pwm_test">PWM Test</string>
    <string name="usart_test">USART Test</string>
    <string name="i2c_test">I2C Test</string>
    <string name="highlow_test">HighLow Test</string>
    <string name="motor_test">Motor Test</string>
    <string name="Gear">Gear  :</string>
    <string name="Pulse">Pulse :</string>
    <string name="P">P :</string>
    <string name="I">I   :</string>
    <string name="D">D :</string>
    <string name="function_highlow1_config">1 H/L Pin</string>
    <string name="function_highlow2_config">2 H/L Pin</string>
    <string name="function_highlow3_config">3 H/L Pin</string>
    <string name="function_highlow4_config">4 H/L Pin</string>
    <string name="function_adc_data_config">Data Confing</string>
    <string name="function_adc_result_fure">ADC 값 자체로 출력</string>
    <string name="function_adc_result_calibration">ADC 값 변환해서 출력</string>
    <string name="function_i2c_SlaveSet">Slave Address</string>
    <string name="function_i2c_Set">Setting</string>
    <string name="function_pwm_frequencyset">Frequenct Set</string>
    <string name="Frequency">Frequency </string>
    <string name="function_pwm_duty_ratio_set">Duty Ratio Set</string>
    <string name="function_usart_band_rate_set">Baud Rate Set</string>
    <string name="function_usart_connect_ok">Connect OK</string>
    <string name="function_usart_data_receive">Data Receive</string>
    <string name="function_usart_data_send">Data Send</string>
    <string name="function_motor_frequency_set">Frequency Set</string>
    <string name="function_motor_PID_controll_set">PID Control Set</string>
    <string name="function_motor_data_graph">Data Graph</string>
    <string name="Motor_Spec">모터 스펙 입력</string>
    <string name="Object_RPM">목표 RPM 설정</string>
    <string name="PID_number">PID 계수 설정</string>
    <string name="adcdataset">ADC 비교값 설정</string>
    <string name="motordataset">Motor 비교값 설정</string>
    <string name="adcdataset_summary">ADC 비교값을 설정 합니다.</string>
    <string name="motordataset_summary">Motor 비교값을 설정 합니다.</string>
    <string name="adc_dataset1">ADC dataset1</string>
    <string name="adc_dataset2">ADC dataset2</string>
    <string name="adc_dataset3">ADC dataset3</string>
    <string name="motor_dataset1">Motor dataset1</string>
    <string name="motor_dataset2">Motor dataset2</string>
    <string name="motor_dataset3">Motor dataset3</string>
    <string name="dataset1summary">첫 번재 비교 데이터를 선택하세요.</string>
    <string name="dataset2summary">두 번째 비교 데이터를 선택하세요.</string>
    <string name="dataset3summary">세 번째 비교 데이터를 선택하세요.</string>
    <string name="x_max">X Size</string>
    <string name="y_max">Y Size</string>
    <string name="x_max_summary">x의치 최대값을 설정하세요.</string>
    <string name="y_max_summary">y의치 최대값을 설정하세요.</string>

</resources>