<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30dp" >

    <TextView
        android:id="@+id/textView1"
        style="@style/setting_paragraph_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/function_motor_frequency_set" />

    <include
        android:layout_width="match_parent"
        android:layout_height="150dp"
        layout="@layout/pulse_layout" />

    <TextView
        android:id="@+id/textView3"
        style="@style/setting_paragraph_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/function_motor_PID_controll_set" />

    <LinearLayout
        style="@style/setting_sub2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/setting_unit_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        style="@style/setting_sub2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/setting_unit_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/I" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        style="@style/setting_sub2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/setting_unit_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/D" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

</LinearLayout>