<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/setting_paragraph_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Object_RPM" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/object_RPM"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:hint="@string/objective_RPM_"
                android:inputType="number" >
            </EditText>


        </LinearLayout>
    </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical" >
        </LinearLayout>
    
    
    <TextView
        android:id="@+id/textView3"
        style="@style/setting_paragraph_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PID_number" />

    <LinearLayout
        style="@style/setting_sub2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/setting_unit_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P" />

        <EditText
            android:id="@+id/pid_p_Edit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="  P 계수"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        style="@style/setting_sub2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/setting_unit_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/I" />

        <EditText
            android:id="@+id/pid_i_Edit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="  I 계수"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        style="@style/setting_sub2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/setting_unit_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/D" />

        <EditText
            android:id="@+id/pid_d_Edit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="  D 계수"
            android:inputType="number" />
    </LinearLayout>

              <Button
                android:id="@+id/btn_PID"
                style="@style/function_setting_submit_button2"
                android:layout_marginRight="30dp"
                android:layout_gravity="right" />
    
    
</LinearLayout>