<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/setting_paragraph_name"
        android:text="@string/function_highlow1_config" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/highlow1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector"
            android:textColor="@android:color/transparent"
            android:textOff="Off"
            android:textOn="On" />
    </LinearLayout>

    <TextView
        style="@style/setting_paragraph_name"
        android:text="@string/function_highlow2_config" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/highlow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector"
            android:textColor="@android:color/transparent"
            android:textOff="Off"
            android:textOn="On" />
    </LinearLayout>

    <TextView
        style="@style/setting_paragraph_name"
        android:text="@string/function_highlow3_config" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:orientation="horizontal" >
        
          <ToggleButton
            android:id="@+id/highlow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector"
            android:textColor="@android:color/transparent"
            android:textOff="Off"
            android:textOn="On" />
    </LinearLayout>

    <TextView
        style="@style/setting_paragraph_name"
        android:text="@string/function_highlow4_config" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:orientation="horizontal" >
          <ToggleButton
            android:id="@+id/highlow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector"
            android:textColor="@android:color/transparent"
            android:textOff="Off"
            android:textOn="On" />  
        
    </LinearLayout>

</LinearLayout>
