<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/temp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_main_background_edit"
    android:padding="10dp" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/main_home_option_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_option" />

        <TextView
            android:id="@+id/main_textview_subject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/main_title"
            android:textColor="#FFF"
            android:textSize="19sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/main_home_bluefunc_parent_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_corner_border_gray"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="50dp"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/main_home_bluetooth_connect_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_noborder_gray"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/main_home_bluetooth_connect_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/image_bluetooth_connect" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_home_funtion_layout"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_noborder_white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingTop="20dp" >

                <LinearLayout style="@style/main_home_function_btn_text_layout" >

                    <ImageButton
                        android:id="@+id/main_home_adc_btn"
                        style="@style/main_home_function_btn"
                        android:background="@drawable/ic_adc" />

                    <TextView
                        android:id="@+id/main_home_adc_text"
                        style="@style/main_home_function_text"
                        android:text="@string/adc_test" />
                </LinearLayout>

                <LinearLayout style="@style/main_home_function_btn_text_layout" >

                    <ImageButton
                        android:id="@+id/main_home_pwm_btn"
                        style="@style/main_home_function_btn"
                        android:background="@drawable/ic_pwm" />

                    <TextView
                        android:id="@+id/main_home_pwm_text"
                        style="@style/main_home_function_text"
                        android:text="@string/pwm_test" />
                </LinearLayout>

                <LinearLayout style="@style/main_home_function_btn_text_layout" >

                    <ImageButton
                        android:id="@+id/main_home_usart_btn"
                        style="@style/main_home_function_btn"
                        android:background="@drawable/ic_usart" />

                    <TextView
                        android:id="@+id/main_home_usart_text"
                        style="@style/main_home_function_text"
                        android:text="@string/usart_test" />
                </LinearLayout>

                <LinearLayout style="@style/main_home_function_btn_text_layout" >

                    <ImageButton
                        android:id="@+id/main_home_i2c_btn"
                        style="@style/main_home_function_btn"
                        android:background="@drawable/ic_i2c" />

                    <TextView
                        android:id="@+id/main_home_i2c_text"
                        style="@style/main_home_function_text"
                        android:text="@string/i2c_test" />
                </LinearLayout>

                <LinearLayout style="@style/main_home_function_btn_text_layout" >

                    <ImageButton
                        android:id="@+id/main_home_clock_btn"
                        style="@style/main_home_function_btn"
                        android:background="@drawable/ic_clock" />

                    <TextView
                        android:id="@+id/main_home_clock_text"
                        style="@style/main_home_function_text"
                        android:text="@string/highlow_test" />
                </LinearLayout>

                <LinearLayout style="@style/main_home_function_btn_text_layout" >

                    <ImageButton
                        android:id="@+id/main_home_motor_btn"
                        style="@style/main_home_function_btn"
                        android:background="@drawable/ic_motor" />

                    <TextView
                        android:id="@+id/main_home_motor_text"
                        style="@style/main_home_function_text"
                        android:text="@string/motor_test" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>